--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install --force && npm run build"
+  command = "rm -rf node_modules && npm install && npm run build"
   publish = "dist"
 
 [build.environment]
